[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctbcsec-mcp-server"
version = "0.1.0"
description = "MCP server for CTBC Securities CTS Trading API"
authors = [
    { name = "CTBC Securities", email = "support@ctbcsec.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.0",
    "pywin32>=306",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[tool.uv]
dev-dependencies = [
    "mcp[cli]>=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ctbcsec_mcp"]

[project.scripts]
ctbcsec-mcp = "ctbcsec_mcp.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
